templates/manifests/demos/tns/app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app
  template:
    metadata:
      labels:
        name: app
    spec:
      containers:
      - name: app
        image: grafana/tns-app:latest
        imagePullPolicy: IfNotPresent
        args:
        - -log.level=debug
        - http://db
        ports:
        - name: http-metrics
          containerPort: 80
