templates/manifests/demos/tns/loadgen-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgen
spec:
  replicas: 1
  selector:
    matchLabels:
      name: loadgen
  template:
    metadata:
      labels:
        name: loadgen
    spec:
      containers:
      - name: loadgen
        image: grafana/tns-loadgen:latest
        imagePullPolicy: IfNotPresent
        args:
        - -log.level=debug
        - http://app
        ports:
        - name: http-metrics
          containerPort: 80
