templates/manifests/demos/tns/app-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: app
  labels:
    demo: "true"
spec:
  selector:
    name: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
