templates/manifests/demos/tns/db-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: db
  labels:
    demo: "true"
spec:
  selector:
    name: db
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
