templates/manifests/demos/tns/loadgen-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: loadgen
  labels:
    demo: "true"
spec:
  selector:
    name: loadgen
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
